update map z-index to fix menu bug

--- a/public_html/styles/homepage.css
+++ b/public_html/styles/homepage.css
@@ -6,6 +6,7 @@ div#map {
     width: 100%;
     max-width: 100%;
     min-height: 480px;
+    z-index: -1000;
 }
 
 /* -----------------------------------
